--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "ddn/router",
     "description": "Routing for Web applications",
     "type": "library",
-    "license": "Apache 2.0",
+    "license": "AGPL-3.0-or-later",
     "authors": [
         {
             "name": "Carlos A.",
