--- a/composer.json
+++ b/composer.json
@@ -12,8 +12,7 @@
     "require": {
         "php": ">=7.4",
         "pug-php/pug": ">=3.5.0",
-        "phug/phug": ">=1.9",
-        "ddn/common": ""
+        "phug/phug": ">=1.9"
     },
     "autoload": {
         "psr-4": {
